# sia

./: .gitignore  pyproject.toml
assets/: regions.txt
services/client/: client.py  ui_cl.py
services/client/schema/: booking_details.py  graph_states.py  intent.py  name_extraction.py  scraping_result.py  tool_classification.py  web_result.py
services/client/subgraphs/: destination_recommendation.py  stay_search.py
services/client/utils/: middleware.py
services/server/: Dockerfile  compose.yaml  pyproject.toml  server.py  start-server.ps1
services/server/schema/api_response/: __init__.py  booking_error.py  destination_type.py  hotel.py  locations.py  review.py
shared/prompt_registry/: common.py  destination_recommendation.py  general.py  stay_search.py
shared/schema/: sorting_methods.py
shared/utils/: helpers.py  logger.py  prompt_registry.py  pydantic_validator.py  usage_analytics.py
