[project]
name = "mp-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.73.0",
    "bs4>=0.0.2",
    "chainlit>=2.9.2",
    "country-state-city>=0.1.0",
    "demjson3>=3.0.6",
    "fastmcp>=2.13.1",
    "geograpy3>=0.3.0",
    "langchain>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "mcp[cli]>=1.21.1",
    "nltk>=3.9.3",
    "py-countries-states-cities-database>=2.2.13",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "rich>=14.2.0",
    "setuptools>=82.0.0",
    "streamlit>=1.51.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "tzdata>=2025.2",
]
