[project]
name = "mp-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.73.0",
    "fastmcp>=2.13.1",
    "langchain>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "mcp[cli]>=1.21.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
